--- a/src/main/resources/tech/altier/genericposjava/main-view.fxml
+++ b/src/main/resources/tech/altier/genericposjava/main-view.fxml
@@ -16,4 +16,14 @@
 
     </center>
 
+    <bottom> <!-- Total / payment -->
+
+        <VBox spacing="10" BorderPane.alignment="CENTER" >
+
+        </VBox>
+
+    </bottom>
+
+    
+
 </BorderPane>
