--- a/src/main/resources/tech/altier/genericposjava/main-view.fxml
+++ b/src/main/resources/tech/altier/genericposjava/main-view.fxml
@@ -24,6 +24,13 @@
 
     </right>
 
+    <bottom> <!-- Buttons -->
+
+        <VBox spacing="10" BorderPane.alignment="CENTER" >
+
+        </VBox>
+
+    </bottom>
 
 
 </BorderPane>
